Fixing horizontal scroll error

--- a/guides/assets/stylesrc/_main.scss
+++ b/guides/assets/stylesrc/_main.scss
@@ -648,7 +648,7 @@ body.guide {
     color: #fff;
     font-size: 0.75em;
     padding: 1em 0 .5em 0;
-    width: 100vw;
+    width: 100%;
 
     p {
       max-width: 100vw;
